k8s/ingress-nginx/yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ingress
  labels:
    app: demo-ingress
