k8s/ingress-nginx/yaml/service.yaml
# 爲 v1 創建服務
apiVersion: v1
kind: Service
metadata:
  namespace: demo-ingress
  name: demo-v1
  labels:
    app: demo-v1
spec:
  selector:
    app: demo-v1
  ports:
    - name: service
      port: 9000
      targetPort: 9000
---
# 爲 v2 創建服務
apiVersion: v1
kind: Service
metadata:
  namespace: demo-ingress
  name: demo-v2
  labels:
    app: demo-v2
spec:
  selector:
    app: demo-v2
  ports:
    - name: service
      port: 9000
      targetPort: 9000
