k8s/ingress-nginx/yaml/ingress.yaml
# 爲 http 創建的 ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo-ingress
  name: demo-http-ingress
  labels:
    app.kubernetes.io/component: controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1/$2 # $參數來自正則替換
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/(v1)/(.*)
            backend:
              service:
                name: demo-v1
                port:
                  number: 9000
          - pathType: Prefix
            path: /api/(v2)/(.*)
            backend:
              service:
                name: demo-v2
                port:
                  number: 9000
---
# 爲 grpc 創建的 ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo-ingress
  name: demo-grpc-ingress
  labels:
    app.kubernetes.io/component: controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /jsgenerate_server.api.$1/$2 # $參數來自正則替換
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /jsgenerate_server.api.(V1)/(.*)
            backend:
              service:
                name: demo-v1
                port:
                  number: 9000
          - pathType: Prefix
            path: /jsgenerate_server.api.(V2)/(.*)
            backend:
              service:
                name: demo-v2
                port:
                  number: 9000
